# imagetool

./: .gitattributes  .gitignore  Makefile.am  README.md  configure.ac  coverity.sh
doc/: architecture.txt
include/: bitmap.h  filesink.h  filesource.h  filesystem.h  fsdeptracker.h  fstream.h  fstree.h  gcfg.h  libimgtool.h  plugin.h  predef.h  tar.h  test.h  util.h  volume.h  xfrm.h
lib/filesystem/: Makemodule.am  canonicalize_path.c  create_inode_table.c  file_accounting.c  file_append.c  file_mark_not_sparse.c  file_mark_sparse.c  file_move_to_end.c  file_read.c  file_read_block.c  file_write.c  fstree.c  mknode.c  node_from_path.c  resolve_hard_links.c  sort.c
lib/filesystem/cpiofs/: cpiofs.c  cpiofs.h  format.c
lib/filesystem/fatfs/: conv.c  dirent.c  fat.c  fatfs.c  fatfs.h  meta.c  super.c
lib/filesystem/fstree/: add_gap.c  create_inode_table.c  file_accounting.c  file_append.c  file_mark_not_sparse.c  file_mark_sparse.c  file_move_to_end.c  file_read.c  file_truncate.c  file_volume.c  file_write.c  fstree.c  get_path.c  mknode.c  node_from_path.c  resolve_hard_links.c  sort.c
lib/filesystem/tarfs/: format.c  padd_file.c  tarfs.c  tarfs.h  write_file_hdr.c  write_hard_link.c  write_header.c  write_tree_dfs.c
lib/fstream/: Makemodule.am  autodetect.c  get_line.c  internal.h  istream.c  istream_xfrm.c  nullstream.c  ostream.c  ostream_xfrm.c
lib/fstream/compress/: ostream_compressor.c
lib/fstream/uncompress/: autodetect.c  istream_compressor.c  xz.c
lib/fstream/unix/: istream.c  ostream.c
lib/fstree/: Makemodule.am  add_file_block.c  canonicalize_path.c  fstree.c  node_from_path.c  resolve_hard_links.c  sort.c
lib/gcfg/: Makemodule.am  dec_num.c  file.c  is_valid_utf8.c  number_to_double.c  parse_boolean.c  parse_enum.c  parse_file.c  parse_number.c  parse_size.c  parse_string.c  parse_vector.c  xdigit.c
lib/image/: Makemodule.am  blocksize_adapter.c  file_volume.c  volume.c  volume_memmove.c  volume_ostream.c  volume_read.c  volume_write.c
lib/image/basic/: blocksize_adapter.c  file_volume.c
lib/image/partition/: mbrdisk.c  meta.c
lib/image/partition/mbr/: disk.c  mbr.h  meta.c  part.c
lib/imgtool/: Makemodule.am  filesink.c  fsdeptracker.c  gcfg_file.c  plugin.c  state.c
lib/imgtool/filesource/: aggregate.c  directory.c  filter.c  listing.c  tar.c
lib/tar/: Makemodule.am  base64.c  checksum.c  internal.h  number.c  padd_file.c  pax_header.c  read_header.c  read_sparse_map_old.c  write_header.c
lib/test/: Makemodule.am  compare_files.c  temp_file.c
lib/util/: Makemodule.am  bitmap.c  is_memory_zero.c  read_retry.c  reflect.c  write_retry.c
lib/xfrm/: Makemodule.am  bzip2.c  gzip.c  xz.c  zstd.c
tests/: Makemodule.am  bitmap.c  blocksize_adapter1.c  blocksize_adapter2.c  canonicalize_path.c  file_read_block.c  file_volume.c  fstree.c  fstree_sort.c  gen_inode_table.c  get_line.c  get_path.c  mknode.c  node_from_path.c  resolve_hard_links.c  tar_big_file.c  tar_simple.c  tar_sparse.c  tar_sparse_gnu.c  tar_target_filled.c  tar_xattr.c  tar_xattr_bin.c
tests/imgtool/: Makemodule.am  test1.cfg  test1.sh.in  test1.tar  test2.cfg  test2.sh.in  test3.cfg  test3.sh.in  test3.tar  test4.cfg  test4.img  test4.sh.in
tests/libfilesystem/: Makemodule.am  canonicalize_path.c  file_accounting.c  file_append.c  file_mark_sparse.c  file_move_to_end.c  file_read.c  file_read_block.c  file_truncate.c  file_write.c  fstree.c  fstree_sort.c  gen_inode_table.c  get_path.c  mknode.c  node_from_path.c  resolve_hard_links.c
tests/libfilesystem/cpiofs/: cpiofs.c  reference.cpio
tests/libfilesystem/fatfs/: fat32.c  fat32_empty.c
tests/libfilesystem/fstree/: add_gap.c  canonicalize_path.c  file_accounting.c  file_append.c  file_mark_sparse.c  file_move_to_end.c  file_read.c  file_truncate.c  file_volume.c  file_write.c  fstree.c  fstree_sort.c  fstree_sort_type.c  gen_inode_table.c  get_path.c  mknode.c  node_from_path.c  resolve_hard_links.c
tests/libfilesystem/tarfs/: reference.tar  tarfs.c
tests/libfstream/: Makemodule.am  get_line.c
tests/libgcfg/: Makemodule.am  dec_num.c  dummy_file.c  dummy_file.h  is_valid_utf8.c  parse_boolean.c  parse_number.c  parse_size.c  parse_string.c  parse_vector.c  test.h  xdigit.c
tests/libimage/: Makemodule.am  blocksize_adapter1.c  blocksize_adapter2.c  blocksize_adapter3.c  blocksize_adapter4.c  file_volume.c  mbrdisk.c  volume_memmove.c  volume_ostream.c  volume_read.c  volume_write.c
tests/libimgtool/: Makemodule.am  filesink.c  gcfg_file.c
tests/libimgtool/filesource/: aggregate.c  directory.c  filter.c  listing.c  tar1.c  tar1.tar  tar2.c  tar4.tar.xz  tar5.tar.bz2  tar6.tar.zst
tests/libimgtool/stacking/: stacking1.c  stacking1.tar
tests/libtar/: Makemodule.am  tar_big_file.c  tar_simple.c  tar_sparse.c  tar_sparse_gnu.c  tar_target_filled.c  tar_xattr.c  tar_xattr_bin.c
tests/libtar/data/file-size/: 12-digit.tar  gnu.tar  pax.tar
tests/libtar/data/format-acceptance/: gnu-g.tar  gnu.tar  link_filled.tar  pax.tar  ustar-pre-posix.tar  ustar.tar  v7.tar
tests/libtar/data/large-mtime/: 12-digit.tar  gnu.tar  pax.tar
tests/libtar/data/long-paths/: gnu.tar  pax.tar  ustar.tar
tests/libtar/data/negative-mtime/: gnu.tar  pax.tar
tests/libtar/data/sparse-files/: gnu-small.tar  gnu.tar  pax-gnu0-0.tar  pax-gnu0-1.tar  pax-gnu1-0.tar
tests/libtar/data/user-group-largenum/: 8-digit.tar  gnu.tar  pax.tar
tests/libtar/data/xattr/: acl.tar  xattr-libarchive.tar  xattr-schily-binary.tar  xattr-schily.tar
tests/libutil/: Makemodule.am  bitmap.c  is_memory_zero.c  reflect.c
tests/libxfrm/: Makemodule.am  bzip2.c  gzip.c  xz.c  zstd.c
